syntax = "proto3";

package chip.rpc;

import 'pw_protobuf_protos/common.proto';

message EventSetRequest {
  uint32 endpoint_id = 1;
  uint32 cluster_id = 2;
  string event_payload = 3; // 
}

message EventSetResponse {
  uint64 event_number = 1;
}

message EventGetRequest {
  uint32 endpoint_id = 1;
}

message EventGetResponse {
  uint32 event_id = 1;
}

service Event {
  // Set will return generated event number (caused by change) if all supported fields are successfully applied, any
  // unsupported fields will be ignored.
  rpc Set(EventSetRequest) returns (EventSetResponse){}

  // Get will return the latest event number
  rpc Get(EventGetRequest) returns (EventGetResponse){}
}
